fixed header overflow issue, as well as optimize for horizontal mobile.  header needs tweaks for full screen now. but for now, working and ready to push to gitHub.

--- a/public/css/components/mainPage/jumboScreen.css
+++ b/public/css/components/mainPage/jumboScreen.css
@@ -130,6 +130,13 @@
 }
 
 
+/* ====================== IPHONE 6/7/8 PLUS HORIZONTAL =================== */
+@media only screen and (max-width: 750PX) {
+    .marginContainer #jumboScreen {
+        height: 50rem;
+    }
+}
+
 /* ============================ IPHONE 6/7/8 PLUS =========================== */
 @media only screen and (max-width: 450PX) {
     .marginContainer #jumboScreen{
