--- a/public/css/components/mainPage/reviewSection.css
+++ b/public/css/components/mainPage/reviewSection.css
@@ -24,7 +24,7 @@
     height: 10rem;
 }
 .blackContainer .marginContainer #reviewSection .boxContainer .reviewCompanyBox.boxOne{
-    background: url("https://sanzaris.com/wp-content/uploads/2014/06/Best-Restaurant-in-NJ-is-2014-Open-Table-Diners-Choice-Winner.png") center center no-repeat;
+    background: url("https://pbs.twimg.com/profile_images/1214546674284138497/M-D3iyxV_400x400.jpg") center center no-repeat;
     background-size: contain;
 }
 .blackContainer .marginContainer #reviewSection .boxContainer .reviewCompanyBox.boxTwo{
